libs/extractor/tests/snapshots/snapshots/extractor__tests__css_variable_reassignment.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {css as cssFunction} from '@devup-ui/core'\nconst myCss = cssFunction;\nconst className = myCss({ bg: \"red\" })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst myCss = cssFunction;\nconst className = \"a-a\";\n",
}
